--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,18 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 notebook_shim==0.2.4
 numpy==2.2.0
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -116,6 +128,7 @@ tinycss2==1.4.0
 torch==2.5.1+cpu
 tornado==6.4.2
 traitlets==5.14.3
+triton==3.1.0
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
