--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ fqdn==1.5.1
 fsspec==2024.2.0
 gitdb==4.0.11
 GitPython==3.1.43
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -139,4 +140,3 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
-gunicorn
