--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.2.1
 notebook_shim==0.2.4
-numpy==2.2.0
+numpy==1.23.5
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -126,7 +126,7 @@ tenacity==9.0.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
-torch==2.5.1+cpu
+torch==2.4.1+cu121
 tornado==6.4.2
 traitlets==5.14.3
 triton==3.1.0
